Fix overflow on anomaly chart

--- a/src/AnomalyDetection/style.css
+++ b/src/AnomalyDetection/style.css
@@ -1,7 +1,8 @@
 
 .anomaly-chart-container--div {
   position: relative;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .anomaly-chart--svg {
